--- a/memory.css
+++ b/memory.css
@@ -23,10 +23,58 @@ p{
 	padding: 8px 16px;
 	font-size: 30px;
 	border-radius: 10px;
-	background-color:#27ae60;
-	color:white;
+	background-color: #27ae60;
+	color: white;
 }
 .grid-container {
 	display:grid;
-	
+	justify-content: center;
+	grid-gap:16px;
+	grid-template-columns:repeat(6, 140px);
+	grid-template-rows:repeat(2, calc(140px / 2 *3));
+}
+
+.card{
+	height: calc(140px/ 2 *3);
+	width:140px;
+	border-radius:10px;
+	background-color: white;
+	position: relative;
+	transform-style: preserve-3d;
+	transition: all 0.5s ease-in-out;
+}
+
+.font-image {
+	width: 60px;
+	height: 60px;
+}
+
+.card.flipped{
+	transform: rotateY(180deg);
+}
+
+.font,
+.back {
+	backface-visibility: hidden;
+	position: absolute;
+	border-radius: 10px;
+	top: 0;
+	left:0;
+	height: 100%;
+	width:100%;
+}
+
+.card .font {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transform: rotateY(180deg);
+}
+
+.card .back {
+	background-image: url("./card1.png");
+	background-position: center center;
+	background-size: cover;
+	backface-visibility: hidden;
+	border-radius: 5px;
 }
